--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
        now = 0;
        clearInterval(timer);
        gameStart();
+       paused = false;
      }
      function timeStep() {
        restTime--;
